--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,61 @@
          @apply text-[1em] font-bold text-white transition-all duration-200 hover:opacity-80 active:opacity-60 cursor-pointer max-[600px]:text-[0.9em] max-[600px]:font-[500]
     }
 }
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideInRight {
+  from {
+    transform: translateX(200px);
+    opacity : 0.5; /* commence hors écran à droite */
+  }
+  to {
+    transform: translateX(0); 
+    opacity : 1;/* revient à sa position normale */
+  }
+}
+
+.slideRight {
+  animation: slideInRight 1s ease-in-out 0.4s forwards;
+}
+
+@keyframes slideInLeft {
+  from {
+    transform: translateX(-200px);
+    opacity : 0.5; /* commence hors écran à droite */
+  }
+  to {
+    transform: translateX(0); 
+    opacity : 1;/* revient à sa position normale */
+  }
+}
+
+.slideLeft {
+  animation: slideInLeft 1s ease-in-out 0.4s forwards;
+}
+
+
+
+@keyframes slideInBounce {
+  0% {
+    transform: translateY(50px);
+  }
+  80% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+.property-card {
+  animation: slideInBounce 0.6s ease-in-out 0.2s forwards;
+}
