--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,9 @@
     .selectType{
       @apply w-[300px] bg-gray-50 py-1 px-3 rounded-[5px] border border-gray-400 resize-none focus:outline-none focus:ring-2 focus:ring-blue-400 max-[750px]:w-[250px] max-[450px]:w-[200px]
     }
-
+    .footerLink{
+      @apply text-white 
+    }
 }
 
 @keyframes fadeInUp {
@@ -73,3 +75,4 @@
 .property-card {
   animation: slideInBounce 0.6s ease-in-out 0.2s forwards;
 }
+
